update latest from laptop